[project]
name = "python-graphics-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.4.6",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pyglm>=2.8.3",
    "pyopengl>=3.1.10",
    "pywavefront>=1.3.3",
]
